--- a/css/index.css
+++ b/css/index.css
@@ -604,15 +604,6 @@ hue-6-2: #e6c07b
   margin-top: 30px;
   margin-right: 30px;
 }
-.about-content {
-  display: flex;
-  max-width: 1160px;
-  margin: 0 auto;
-  margin-top: 0;
-  background: #ffffff;
-  border-radius: 10px;
-  flex-direction: column;
-}
 .about-content-info {
   width: 100%;
   box-sizing: border-box;
@@ -641,29 +632,11 @@ hue-6-2: #e6c07b
     padding: 40px 20px;
   }
 }
-.archive-content {
-  display: flex;
-  max-width: 1160px;
-  margin: 0 auto;
-  margin-top: 0;
-  background: #ffffff;
-  border-radius: 10px;
-  flex-direction: column;
-}
 .archive-content-data {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
-}
-.categories-content {
-  display: flex;
-  max-width: 1160px;
-  margin: 0 auto;
-  margin-top: 0;
-  background: #ffffff;
-  border-radius: 10px;
-  flex-direction: column;
 }
 .categories-content-data {
   display: flex;
@@ -1068,15 +1041,6 @@ hue-6-2: #e6c07b
   margin-top: -15px;
   cursor: pointer;
 }
-.links-content {
-  display: flex;
-  max-width: 1160px;
-  margin: 0 auto;
-  margin-top: 0;
-  background: #ffffff;
-  border-radius: 10px;
-  flex-direction: column;
-}
 .links-content-data {
   display: flex;
   width: 100%;
@@ -1331,13 +1295,6 @@ hue-6-2: #e6c07b
   background: linear-gradient(0deg, #f1f5fb, #f9fcff) !important;
 }
 .post-content {
-  display: flex;
-  max-width: 1160px;
-  margin: 0 auto;
-  margin-top: 0;
-  background: #ffffff;
-  border-radius: 10px;
-  flex-direction: column;
   position: relative;
   z-index: 2;
 }
@@ -1428,29 +1385,11 @@ hue-6-2: #e6c07b
     margin: 40px 20px;
   }
 }
-.tag-content {
-  display: flex;
-  max-width: 1160px;
-  margin: 0 auto;
-  margin-top: 0;
-  background: #ffffff;
-  border-radius: 10px;
-  flex-direction: column;
-}
 .tag-content-data {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
-}
-.tags-content {
-  display: flex;
-  max-width: 1160px;
-  margin: 0 auto;
-  margin-top: 0;
-  background: #ffffff;
-  border-radius: 10px;
-  flex-direction: column;
 }
 .tags-content-data {
   display: flex;
@@ -1512,4 +1451,16 @@ hue-6-2: #e6c07b
 .content-move {
   margin-top: -64px !important;
   transition: margin-top 0.8s ease-in-out;
+}
+
+.post-content {
+  display: flex;
+    max-width: 1160px;
+    margin: 0 auto;
+    margin-top: 0;
+    background: #ffffff;
+    border-radius: 10px;
+    flex-direction: column;
+    position: relative;
+    z-index: 2;
 }
